--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -7,30 +7,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Habit Tracker"
-        android:id="@+id/textView7"
-        android:layout_alignTop="@+id/textView8"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="71dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="History"
-        android:id="@+id/textView8"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="23dp"
-        android:layout_alignParentTop="false"
+        android:text="@string/History"
+        android:id="@+id/History_title"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="17dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView2"
+        android:id="@+id/History_list_view"
         android:layout_marginTop="24dp"
-        android:layout_below="@+id/textView7"
-        android:layout_alignStart="@+id/textView8"
-        android:layout_alignParentTop="false" />
+        android:layout_alignStart="@+id/History_title"
+        android:layout_alignParentTop="false"
+        android:layout_alignTop="@+id/History_title" />
 
 </RelativeLayout>
